[package]
name = "upstash"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.10", features = ["json"] }
url = "2.2.2"
once_cell = "1.12.0"
async-trait = "0.1.53"
serde = { version = "1.0.137", features = ["derive"] }

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.18.2", features = ["rt-multi-thread", "macros"] }
